--- a/master/website/board/templates/board/b_co.html
+++ b/master/website/board/templates/board/b_co.html
@@ -67,14 +67,14 @@
                                     <input type="text" class="form-control" id="co_div">
                                 </td>
                                 <td >
-                                    <select class="cn">
+                                    <select class="cn"  style="width:100%;padding:3px;">
                                         {% for i in rsUnitCn %}
                                         <option value="{{i.id}}"> {{ i.cd_nm }} </option>
                                         {% endfor %}
                                     </select>
                                 </td>
                                 <td >
-                                    <select class="cur">
+                                    <select class="cur"  style="width:100%;padding:3px;">
                                         {% for i in rsUnitCur %}
                                         <option value="{{i.id}}"> {{ i.cd_nm }} </option>
                                         {% endfor %}
