--- a/master/website/board/templates/board/b_bizarea.html
+++ b/master/website/board/templates/board/b_bizarea.html
@@ -54,7 +54,7 @@
                                     <input type="text" class="form-control" id="bizarea_cd" value="" >
                                 </td>
                                 <td align="center">
-                                    <select class="coid">
+                                    <select class="coid"  style="width:100%;padding:3px;">
                                         {% for ii in rsCo %}
                                         <option value="{{ii.id}}"> {{ ii.co_nm }} </option>
                                         {% endfor %}
@@ -77,14 +77,14 @@
 
                                 </td>
                                 <td align="center">
-                                    <select class="cn">
+                                    <select class="cn"  style="width:100%;padding:3px;">
                                         {% for ii in rsUnitCn %}
                                         <option value="{{ii.id}}"> {{ ii.cd_nm }} </option>
                                         {% endfor %}
                                     </select>
                                 </td>
                                 <td align="center">
-                                    <select class="cur">
+                                    <select class="cur"  style="width:100%;padding:3px;">
                                         {% for ii in rsUnitCur %}
                                         <option value="{{ii.id}}"> {{ ii.cd_nm }} </option>
                                         {% endfor %}
