--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -45,8 +45,8 @@
                 <ul class="sub">
                     <li><a class="" href="{% url 'board:cc_manucost_if' %}">제조비용 I/F</a></li>
                     <li><a class="" href="{% url 'board:cc_materialcost_if' %}">재료비 I/F</a></li>
-                    <li><a class="" href=#>품목별 제조비용 I/F</a></li>
-                    <li><a class="" href=#>제품원가수불 I/F</a></li>
+                    <li><a class="" href="{% url 'board:cc_itempermanucost_if' %}">품목별 제조비용 I/F</a></li>
+                    <li><a class="" href="{% url 'board:cc_productcostpayment_if' %}">제품원가수불 I/F</a></li>
                     <li><a class="" >원가 I/F</a></li>
                     <li><a class=""  >원가 계산</a></li>
                 </ul>
