excel upload & requiremets.txt update
excel upload & requiremets.txt update

--- a/master/website/board/templates/board2/cc_itempermanucost_if.html
+++ b/master/website/board/templates/board2/cc_itempermanucost_if.html
@@ -70,7 +70,7 @@
             <a class="btn btn-primary btn-sm" href="javascript:void(0);" onclick="downloadTemplate()" title="Bootstrap 3 themes generator">Template 다운로드</a>
         </div>
         <div align="right" style="margin-top:2px">
-            <form method="POST" enctype="multipart/form-data" action="">
+            <form method="POST" enctype="multipart/form-data" action="cc_itempermanucost_if/itempermanucostdata_upload">
                 {% csrf_token %}
                 <table>
                     <tr>
