Update JSON key values, serializers.py
Update JSON key values, serializers.py

--- a/master/website/board/templates/board/b_co.html
+++ b/master/website/board/templates/board/b_co.html
@@ -232,8 +232,8 @@
                     "co_rpr": coRpr,
                     "co_type": coType,
                     "co_div": coDiv,
-                    "unitcur_id": unitCurId,
-                    "unitcn_id": unitCnId
+                    "unitcur": unitCurId,
+                    "unitcn": unitCnId
                 };
 
                 xhr = new XMLHttpRequest();
@@ -287,8 +287,8 @@
                     "co_rpr": coRpr,
                     "co_type": coType,
                     "co_div": coDiv,
-                    "unitcur_id": unitCurId,
-                    "unitcn_id": unitCnId
+                    "unitcur": unitCurId,
+                    "unitcn": unitCnId
                 };
 
                 xhr = new XMLHttpRequest();
