--- a/master/website/board/templates/board/b_itemaccnt.html
+++ b/master/website/board/templates/board/b_itemaccnt.html
@@ -137,9 +137,8 @@
             <div>
                 <table>
                     <tr>
-                        <td width="" align="center">품목코드</td>
-                        <td width="" align="center">품목명</td>
-                        <td width="" align="center">등록</td>
+                        <td width="" align="center">품목계정코드</td>
+                        <td width="" align="center">품목계정명</td>
                         </td>
                     </tr>
                     <tbody>
