--- a/master/website/board/templates/registration/member_edit.html
+++ b/master/website/board/templates/registration/member_edit.html
@@ -25,37 +25,37 @@
                   <label class="control-label col-lg-2" for="user_id">ID </label>
                   <!--label class="control-label col-lg-2" style="alignment: left">{{user_id}} </label-->
                   <div class="col-lg-10">
-                    <input class=" form-control" id="user_id" name="user_id" type="text" value="{{user_id}}" disabled/>
+                    <input class=" form-control" id="user_id" name="user_id" type="text" value="{{user_id}}" disabled style="width: 300px"/>
                   </div>
                 </div>
                 <div class="form-group ">
                   <label for="name" class="control-label col-lg-2">이름 </label>
                   <div class="col-lg-10">
-                    <input class=" form-control" id="name" name="name" type="text" value="{{user_nm}}"/>
+                    <input class=" form-control" id="name" name="name" type="text" value="{{user_nm}}" style="width: 300px"/>
                   </div>
                 </div>
                 <div class="form-group ">
                   <label for="phoneno" class="control-label col-lg-2">전화번호 </label>
                   <div class="col-lg-10">
-                    <input class=" form-control" id="phoneno" name="phoneno" type="text" value="{{phoneno}}"/>
+                    <input class=" form-control" id="phoneno" name="phoneno" type="text" value="{{phoneno}}" style="width: 300px"/>
                   </div>
                 </div>
                 <div class="form-group ">
                   <label for="email" class="control-label col-lg-2">Email </label>
                   <div class="col-lg-10">
-                    <input class="form-control " id="email" name="email" type="email" value="{{email}}"/>
+                    <input class="form-control " id="email" name="email" type="email" value="{{email}}" style="width: 300px"/>
                   </div>
                 </div>
                 <div class="form-group ">
                   <label for="password" class="control-label col-lg-2">비밀번호 변경</label>
                   <div class="col-lg-10">
-                    <input class="form-control " id="password" name="password" type="password" required/>
+                    <input class="form-control " id="password" name="password" type="password" required style="width: 300px"/>
                   </div>
                 </div>
                 <div class="form-group ">
                   <label for="confirm_password" class="control-label col-lg-2">비밀번호 확인 </label>
                   <div class="col-lg-10">
-                    <input class="form-control " id="confirm_password" name="confirm_password" type="password" required/>
+                    <input class="form-control " id="confirm_password" name="confirm_password" type="password" required style="width: 300px"/>
                   </div>
                 </div>
                 <div class="form-group">
